Revision history for Perl extension aws-lambda

{{$NEXT}}

0.6.0 2025-09-10T02:50:47Z
    - Perl 5.42.0 is released #194

0.5.5 2025-09-10T01:19:36Z
    - ap-southeast-6 is available #199
    - bump JSON::XS 4.04 and Cpanel::JSON::XS 4.04 #197
    - bump IO::Socket::SSL 2.095 #184, #187, #193

0.5.4 2025-06-16T02:52:21Z
    - ap-east-2 is available #182
    - bump IO::Socket::SSL 2.091 #177, #181
    - bump Mozilla::CA 20250602 #177

0.5.3 2025-06-04T10:53:08Z
    - Perl 5.40.2 and 5.38.4 are released #170

0.5.2 2025-01-20T20:32:05Z
    - Perl 5.40.1 and 5.38.3 are released #164
    - ap-northeast-7 adn mx-central-1 are available #166
    - bump IO::Socket::SSL 2.089 #155
    - bump YAML::XS 0.902.0 #156, #158
    - bump Mozii::CA 20240924 #159
    - bump Cpanel::JSON::XS v4.39 #160
    - bump YAML::Tiny v1.76 #161, #162

0.5.1 2024-08-26T11:04:34Z
    - ap-southeast-5 is available
    - AWS Lambda Functions powered by AWS Graviton2 now available on ca-west-1
    - bump JSON::MaybeXS 1.004008 #152, #153
    - bump Mozilla::CA 20240730 #150
    - bump IO::Socket::SSL 2.088 #147, 148, #149

0.5.0 2024-06-11T05:13:06Z
    - Perl 5.40.0 is released
    - bump IO::Socket::SSL 2.085 #140
    - bump YAML::XS 0.89 #142

0.4.3 2024-01-22T01:05:31Z
    - bump Paws v0.46 #138
    - bump YAML 1.31 #136
    - bump Net::SSLeay 1.94 #137

0.4.2 2023-12-22T00:18:48Z
    - ca-west-1 is available
    - bump Mozilla::CA 20231213

0.4.1 2023-12-01T14:13:48Z
    - Perl 5.38.2 and 5.36.3 are released

0.4.0 2023-11-14T10:45:45Z
    - introduce Amazon Linux 2023 based image

0.3.0 2023-09-04T11:31:05Z
    - AWS Lambda Functions powered by AWS Graviton2 now available in 6 additional regions #121 
    - disable HTTP timeout #119
    - bump Mozilla::CA 20230821 #120

0.2.0 2023-08-09T11:25:36Z
    - bump Mozilla::CA 20230807
    - support streaming response

0.1.2 2023-08-05T22:22:19Z
    - bump Mozilla::CA 20230801
    - install Carton

0.1.1 2023-08-01T13:32:15Z